--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap');
 * {
   margin: 0;
   padding: 0;
+  color: #ececec;
 }
 
 body {
@@ -11,24 +13,20 @@ body {
 }
 
 header {
-  background-color: #ececec;
   margin: 0 auto;
   text-align: center;
   display:block;
-  z-index: 999;
+  z-index: 99;
 }
 
-#gerencia, #atendimento, #erp,
-#internet,
-#operacao,
-#sistemas,
-#suporte {
+.categorias {
   padding-top: 5px;
   margin-top: -5px;
 
 }
 
 h2 {
+  color: #000;
   font-family: "Roboto";
   position: relative;
   top: 0;
@@ -81,9 +79,49 @@ main {
     -webkit-transition-timing-function: ease-out;
     z-index: 1000;
 }
+.logo-container{
+  margin-bottom: 0;
+}
+.matrix {
+  width:100%;
+  height: 280px;
+  z-index: -1;
+}
+.matrix {
+  display:flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  font-family: Courier, "Lucida Console", monospace;
+}
+.matrix > .entity {
+  position: absolute;
+  animation-name: lightoff;
+  animation-duration: 4s;
+}
+
+@keyframes lightoff {
+  from {
+      color: #8F8;
+      font-weight: bold;
+      text-shadow: 0 0 5px #0A0;
+  }
+  to {
+      color: #030;
+      font-weight: lighter;
+      text-shadow: none;
+  }
+}
 
 .logo {
-  margin: 10px 0 10px 0;
+  width: 300px;
+  margin: 8px 0 10px 0;
+  z-index: 999;
+}
+
+.logo:hover{
+  filter: brightness(1.1);
 }
 
 nav li {
@@ -277,6 +315,7 @@ h2::before {
     padding: 20px 10% 20px 10%;
   }
   .navbar {
+    overflow: auto;
     padding: 0;
     min-height: 0;
   }
@@ -308,6 +347,7 @@ h2::before {
     position: fixed;
     left: -100%;
     top: 0px;
+    padding-top: 30px;
     gap: 0;
     display: block;
     background-color: #32a457;
@@ -323,7 +363,7 @@ h2::before {
   }
 
   .nav-item {
-    margin: 80px 0;
+    margin: 45px 0;
   }
 
   .nav-menu.active {
